--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,5 +27,5 @@ jobs:
             git pull origin main
 
             # Rebuild and restart Docker Compose
-            docker-compose down
-            docker-compose up -d --build
+            docker compose down
+            docker compose up -d --build
